Fix jumping to anchors
Compensate for the height of the navigation bar when scrolling to an
anchor, to prevent the navigation bar from covering the anchor itself.

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ layout: null
 
 /* --- General --- */
 
+html {
+  scroll-padding-top: 50px; /* compensate for the navigation bar height */
+}
+
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
